termine la creacion de e index con el footer

--- a/index.html
+++ b/index.html
@@ -219,6 +219,18 @@
       </form>
 </body>
 <footer> 
-</section>
+    <section class="footer">
+
+        <div class="footer__about">
+            <p class="footer__about__text">Acerca de</p>
+            <p class="footer__about__text">Preguntas frecuentes</p>
+            <p class="footer__about__text">Política de privacidad</p>
+        </div>
+        <div class="footer__info">
+            <p class="footer__info__text">Aqua</p>
+            <p class="footer__info__text">Colombia  </p>
+     
+        </div>
+     </section>
 </footer>
 </html>
